<resources>
    <string name="app_name">IEEESBJIIT</string>
    <string-array name="title_names">
        <item>"Upcoming Events"</item>
        <item>"Events/Workshops"</item>
        <item>"Team Coordinators"</item>
        <item>"Companies Associated"</item>
        <item> Authorities</item>
        <item>"About IEEE SB JIIT"</item>
        <item>"About IEEE"</item>
    </string-array>
    <string-array name="subtitle_names">
        <item>"Register yourself in our upcoming events"</item>
        <item>"Organised by IEEE in last few years"</item>
        <item>"Faculty, alumni and students linked with branch"</item>
        <item>"Our sponsors in our events and workshops"</item>
        <item>Authorities of JIIT</item>
        <item>"Background, objectives of our student branch"</item>
        <item>"Everything about IEEE as an International Organisation"</item>
    </string-array>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="copyright">Copyright © 2017 IEEE JIIT SB . All Rights Reserved.</string>
    <string-array name="sessions">
        <item>"&#9774;  Session 2017&#8211;18 (Current)"</item>
        <item>"&#9774;  Session 2016&#8211;17 (Senior Advisors)"</item>
        <item>"&#9774;  Star Alumni"</item>
    </string-array>
    <string-array name="team_name">
        <item>Yugank Sharma</item>
        <item>Achint Chauhan</item>
        <item>Saloni Srivastav</item>
        <item>Pragati Jaggi</item>
        <item>Yash Garg</item>
        <item>Saransh Singhal</item>
        <item>Sajal Subodh</item>
        <item>Ambrish Sekhri</item>
        <item>Prabhat Shukla</item>
        <item>Karan Gandhi</item>
        <item>Reetika Singh</item>
        <item>Rajershi Gahoi</item>
        <item>Shaunak Chaddha</item>
        <item>Avantika Gupta</item>
    </string-array>
    <string-array name="team_post">
        <item>Chairperson</item>
        <item>Vice Chairperson</item>
        <item>Managing Secretary</item>
        <item>Organising Secretary</item>
        <item>Treasurer</item>
        <item>Event Management Officer</item>
        <item>Technical Officer(CSE)</item>
        <item>Technical Officer(ECE)</item>
        <item>Webmaster</item>
        <item>Creative Officer</item>
        <item>Marketing Manager</item>
        <item>Strategic Officer</item>
        <item>Public Relations Officer</item>
        <item>R&amp;D Officer</item>
    </string-array>
    <string-array name="team_email">
        <item>✉ gargya.shelly@gmail.com</item>
        <item>✉ achint43@gmail.com </item>
        <item>✉ salonisrivastav97@gmail.com</item>
        <item>✉ pragatijaggi01@gmail.com</item>
        <item>✉ yashgarg1611@gmail.com</item>
        <item>✉ singhal.sar@gmail.com</item>
        <item>✉ sajal.subodh10297@gmail.com</item>
        <item>✉ ambrishsekhri31@gmail.com</item>
        <item>✉ prabhat47.1928@gmail.com</item>
        <item>✉ gandhi.karan24@gmail.com</item>
        <item>✉ reetika7096@icloud.com</item>
        <item>✉ rajershigahoi@gmail.com</item>
        <item>✉ stark007.sc@gmail.com</item>
        <item>✉ avantikagupta.96@gmail.com</item>
    </string-array>
    <string-array name="member_names">
        <item>Shivam Arora</item>
        <item>Shivan Trivedi</item>
        <item>Paras Arora</item>
        <item>Piyush Tyagi</item>
        <item>Saurabh Khurana</item>
        <item>Shivam Shukla</item>
        <item>Shubhi Khare</item>
        <item>Manogya Khanna</item>
        <item>Mayank Nayyar</item>
        <item>Sumit Garg</item>
        <item>Tejasv Chhari</item>
    </string-array>
    <string-array name="member_posts">
        <item>Chair Person\n(2016&#8211;17)</item>
        <item>Vice Chair Person\n(2016&#8211;17)</item>
        <item>Secretary\n(2016&#8211;17)</item>
        <item>Treasurer\n(2016&#8211;17)</item>
        <item>Event Management Officer\n(2016&#8211;17)</item>
        <item>Membership Development Officer\n(2016&#8211;17)</item>
        <item>Technical Officer\n(2016&#8211;17)</item>
        <item>Joint Secretary\n (2016&#8211;17)</item>
        <item>Junior Treasurer\n(2016&#8211;17)</item>
        <item>Public Relations Officer\n(2016&#8211;17)</item>
        <item>Creative Officer\n(2016&#8211;17)</item>
    </string-array>
    <string-array name="member_emails">
        <item>✉ shivamrr9@gmail.com</item>
        <item>✉ unity3d.customer@gmail.com</item>
        <item>✉ paras18arora@gmail.com</item>
        <item>✉ mepiyushtyagi@gmail.com</item>
        <item>✉ khuranasaurabh20@gmail.com</item>
        <item>✉ (not available)</item>
        <item>✉ shubhikhare07@gmail.com</item>
        <item>✉ manogyakhanna@gmail.com</item>
        <item>✉ (not available)</item>
        <item>✉ sumitsgs119@gmail.com</item>
        <item>✉ tejasvchhari97@gmail.com</item>
    </string-array>
    <string-array name="star_alumni_name">
        <item>Harsh Goyal</item>
        <item>Dixit Goyal</item>
        <item>Vaibhav Bansal</item>
        <item>Suyash Somani</item>
        <item>Umang Andrew Francis</item>
        <item>Nischay Gupta</item>
        <item>Aashish Chaudhary</item>
        <item>Ojasvi Sharma</item>
        <item>Trishant Dev</item>
    </string-array>
    <string-array name="star_alumni_posts">
        <item>Chair Person\n(2015&#8211;16)</item>
        <item>Vice Chair Person\n(2015&#8211;16)</item>
        <item>Treasurer\n(2015&#8211;16)</item>
        <item>Event Management Officer\n(2015&#8211;16)</item>
        <item>Secretary\n(2015&#8211;16)</item>
        <item>Vice Chair Person\n(2014&#8211;15)</item>
        <item>Event Management Officer</item>
        <item>Membership Development Officer\n(2014&#8211;15)</item>
        <item>General Secretary\n(2014&#8211;15)</item>
    </string-array>
    <string-array name="star_alumni_email">
        <item>✉ hg060595@gmail.com</item>
        <item>✉ dixit.goyal@wedosky.com</item>
        <item>✉ vaibhavbansal23@gmail.com</item>
        <item>✉ suyash.somani@gmail.com</item>
        <item>✉ umangandrewfrancis@gmail.com</item>
        <item>✉ gnischay2@gmail.com</item>
        <item>✉ aashish12102195@gmail.com</item>
        <item>✉ ojasvi2963@gmail.com</item>
        <item>✉ Trishantdeo@gmail.com</item>
    </string-array>
    <string-array name="star_alumni_work">
        <item>Working at: SAP labs</item>
        <item>Working at: Wedosky</item>
        <item>Working at: KartRocket</item>
        <item>Studying at: XIM, Bhubneshwar</item>
        <item>Working at: Wipro</item>
        <item>Working at: Wipro</item>
        <item>Working at: Erricson</item>
        <item>Studying at: IIM Ranchi</item>
        <item>Working at: Wipro</item>
    </string-array>
    <string-array name="auth_name">
        <item>Shri Jaiprakash Gaur</item>
        <item>Professor (Dr.) S C Saxena</item>
        <item>Cmde.K.K. Rohatgi (retd)</item>
        <item>Prof.Krishna Gopal</item>
        <item>Prof.R.C.Jain</item>
    </string-array>
    <string-array name="auth_desc">
        <item>Founder and Ex-Chairman of JP Group\nFounder of JSS</item>
        <item>Vice Chancellor (Acting) </item>
        <item>Dean Students Affairs, Head (T&amp;P) and Nodal Officer for Students Facilitation </item>
        <item>Dean</item>
        <item>HoD-ECE</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_ieee_org">AboutIeeeOrg</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="b4_mission">IEEE is the world’s largest technical professional organization dedicated to advancing technology for the benefit of humanity.</string>
    <string name="mission_ieee">IEEE\'s core purpose is to foster technological innovation and excellence for the benefit of humanity. </string>
    <string name="vision_ieee">IEEE will be essential to the global technical community and to technical professionals everywhere, and be universally recognized for the contributions of technology and of technical professionals in improving global conditions.</string>
    <string name="b4_meaning">IEEE, an association dedicated to advancing innovation and technological excellence for the benefit of humanity, is the world’s largest technical professional society. It is designed to serve professionals involved in all aspects of the electrical, electronic, and computing fields and related areas of science and technology that underlie modern civilization.
IEEE’s roots go back to 1884 when electricity began to become a major influence in society. There was one major established electrical industry, the telegraph, which since the 1840s had come to connect the world with a data communications system faster than the speed of transportation. The telephone and electric power and light industries had just gotten underway.</string>
    <string name="meaning_ieee">IEEE, pronounced \'Eye-triple-E\' stands for the Institute of Electrical and Electronics Engineers. The association is chartered under this name and it is the full legal name. However, as the world\'s largest technical professional association, IEEE\'s membership has long been composed of engineers, scientists, and allied professionals. These include computer scientists, software developers, information technology professionals, physicists, medical doctors, and many others in addition to IEEE\'s electrical and electronics engineering core. For this reason the organization no longer goes by the full name, except on legal business documents, and is referred to simply as IEEE.</string>
    <string name="growth_globalisation">As technologies and the industries that developed them increasingly transcended national boundaries, IEEE has kept pace. It is now a global institution that uses the innovations of the practitioners it represents to enhance IEEE\’s excellence in delivering products and services to members, industries, and the public at large. Publications and educational programs are delivered online, as are member services such as renewal and elections. By 2010, IEEE comprised over 395,000 members in 160 countries. Through its global network of geographical units, publications, web services, and conferences, IEEE remains the world\'s largest technical professional association.</string>
    <string name="b4_ieee_org">IEEE worldwide membership is geographically divided into ten Regions. These Regions are further divided into Sections that serve as the centers of activity for professional engineers at the local level. Your Student Branch falls under your local Section. You can locate your Section by visiting myIEEE and selecting Communities. </string>
    <string name="ieee_org">To provide services for members, IEEE depends not only on a well-trained staff but also on thousands of dedicated volunteers, including Student Branch officers, faculty counselors, Section officers, and Regional volunteers. The Student Activities Committee, Student Services Headquarters staff, Student Branch Chapters, Student Branch affinity groups, and faculty counselors are all committed to the success of the student program.</string>
    <string name="exec_cmtee">The key to running a successful Student Branch is in the administration. There are several key positions: the Branch Officers (Chair, Vice-Chair, Treasurer, and Secretary), the Branch Counselor (or Faculty Advisor), and the subcommittee Chairs. While each has somewhat different duties, it is important to work together as a team. </string>
    <string name="title_activity_about_ieee_sb">AboutIeeeSb</string>
</resources>